--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "csv-parse": "^5.5.5",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "4.1",
     "mongoose": "^6.7.0",
     "morgan": "^1.10.0",
     "validator": "^13.9.0"
