--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "csv-parse": "^5.5.5",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
