--- a/.example.env
+++ b/.example.env
@@ -11,5 +11,5 @@
 DB_CONNECTION_STRING={ The MongoDB connection string. }
 PORT={ the port that the server listens for after connections. }
 BASE_URL={ The base URL of the application. Defaults to '/'. }
-PRIVATE_TOKEN={ The private token used to access the image service. }
-ACCESS_TOKEN_PUBLIC_KEY={ The public key used to verify the JWT access token. }
+ACCESS_TOKEN_LIFE={ The life of the access token in milliseconds. }
+ACCESS_TOKEN_SECRET={ The secret key used to sign the access token. }
